oidc-client/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authservice
  name: oauth2-proxy-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
      - args:
        - --alpha-config=/etc/oauth2_proxy/oauth2_proxy.yml
        - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
        - --silence-ping-logging
        - --proxy-prefix=/oauth2
        - --cookie-secure=false
        - --redirect-url=/oauth2/callback
        - --relative-redirect-url=true
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
        livenessProbe:
          httpGet:
            path: /ping
            port: http-api
            scheme: HTTP
        name: oauth2-proxy
        ports:
        - containerPort: 8080
          name: http-api
          protocol: TCP
        - containerPort: 44180
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: http-api
            scheme: HTTP
        volumeMounts:
        - mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
          name: configmain
          subPath: oauth2_proxy.cfg
        - mountPath: /etc/oauth2_proxy/oauth2_proxy.yml
          name: configalpha
          subPath: oauth2_proxy.yml
        - mountPath: /etc/oauth2_proxy/CLIENT_SECRET
          name: oauth2-proxy
          subPath: CLIENT_SECRET
      volumes:
      - configMap:
          defaultMode: 420
          name: oauth2-proxy
        name: configmain
      - configMap:
          defaultMode: 420
          name: oauth2-proxy-alpha
        name: configalpha
      - name: oauth2-proxy
        secret:
          secretName: oauth2-proxy
